--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,6 +14,8 @@
 
 // Utilities
 @import "utilities/color";
+@import "utilities/hoverable";
+@import "utilities/border";
 
 #wrapper {
   min-height: 100vh;
