add some request etc

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,11 +1,6 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);@charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Nunito);@import url(https://fonts.googleapis.com/css2?family=Raleway:wght@500;
 
-/*!
- * Bootstrap v4.5.2 (https://getbootstrap.com/)
- * Copyright 2011-2020 The Bootstrap Authors
- * Copyright 2011-2020 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
- */
+800&display=swap);@charset "UTF-8";
 
 :root {
   --blue: #007bff;
@@ -17108,6 +17103,91 @@ footer .title::before {
 
 .hoverable:hover::after {
   opacity: 1;
+}
+
+.border-50 {
+  border-radius: 50%;
+}
+
+.text-sm {
+  font-size: 1rem;
+}
+
+.text-sm-1 {
+  font-size: 1.25rem;
+}
+
+.text-sm-2 {
+  font-size: 1.5rem;
+}
+
+.text-sm-3 {
+  font-size: 1.75rem;
+}
+
+.text-md {
+  font-size: 2rem;
+}
+
+.text-md-1 {
+  font-size: 2.25rem;
+}
+
+.text-md-2 {
+  font-size: 2.5rem;
+}
+
+.text-md-3 {
+  font-size: 2.75rem;
+}
+
+.text-lg {
+  font-size: 3rem;
+}
+
+.text-lg-1 {
+  font-size: 3.25rem;
+}
+
+.text-lg-2 {
+  font-size: 3.5rem;
+}
+
+.text-lg-3 {
+  font-size: 3.75rem;
+}
+
+.text-tight {
+  line-height: 100%;
+}
+
+.letter-spaced {
+  letter-spacing: 2px;
+}
+
+.title {
+  font-family: "Raleway", sans-serif;
+  font-weight: bold;
+}
+
+.gap-1 {
+  gap: 0.2rem;
+}
+
+.gap-2 {
+  gap: 0.4rem;
+}
+
+.gap-3 {
+  gap: 0.6rem;
+}
+
+.gap-4 {
+  gap: 0.8rem;
+}
+
+.gap-5 {
+  gap: 1rem;
 }
 
 #wrapper {
