--- a/resources/sass/utilities/_hoverable.scss
+++ b/resources/sass/utilities/_hoverable.scss
@@ -1,6 +1,6 @@
 .hoverable {
   position: relative;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.15);
   /* Pre-render the bigger shadow, but hide it */
   &::after {
     content: "";
