--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -8,6 +8,7 @@ $line-height-base: 1.6;
 
 // Colors
 $colors: (
+  "light-blue": #9eb9eb,
   "blue": #1c60db,
   "darkblue": #0f3b88,
   "black": #000000,
