--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -27,7 +27,7 @@
   min-height: 100vh;
   #content {
     padding-top: 70px;
-    padding-bottom: $footer-height + 10px;
+    margin-bottom: $footer-height;
   }
 }
 
@@ -103,6 +103,77 @@ footer {
       
       .label {
         width: 8rem;
+      }
+    }
+  }
+}
+
+// Welcome Page
+
+.aid-card-container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  gap: 3rem;
+  justify-content: center;
+  padding: 1.5rem 0;
+  margin: 1.5rem 0;
+  border-radius: 0.75rem;
+  margin-bottom: 4rem;
+  
+  &.background-color-red {
+    background:radial-gradient(101.17% 387.26% at 21.16% 2.42%, rgba(245, 48, 60, 0.93) 0%, #CE172D 100%); ;
+  }
+
+  &.background-color-blue {
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 100%), radial-gradient(49.05% 135.38% at 86.04% 0%, #3A8EF1 1.22%, #1759D8 100%); 
+  }
+
+  .left-content-container {
+    height: 20rem;
+    img {
+      height: 100%;
+    }
+    h2 {
+      color: white;
+      font-weight: bold;
+    }
+    p {
+      color: white;
+      font-size: 1.25rem;
+      margin-top: 2rem;
+    }
+    .btn {
+      border-radius: 2rem;
+      &.btn-primary {
+        background-color: #CE172D !important;
+      }
+      a {
+        text-decoration: none;
+        color: white;
+      }
+    }
+  }
+
+  .right-content-container {
+    height: 20rem;
+    img {
+      height: 100%;
+    }
+    h2 {
+      color: white;
+      font-weight: bold;
+    }
+    p {
+      color: white;
+      font-size: 1.25rem;
+      margin-top: 2rem;
+    }
+    .btn {
+      border-radius: 2rem;
+      a {
+        text-decoration: none;
+        color: white;
       }
     }
   }
