--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -27,7 +27,7 @@
   min-height: 100vh;
   #content {
     padding-top: 70px;
-    margin-bottom: $footer-height;
+    padding-bottom: $footer-height + 10px;
   }
 }
 
@@ -114,13 +114,22 @@ footer {
   margin: 1.5rem 0;
   border-radius: 0.75rem;
   margin-bottom: 4rem;
-  
+
   &.background-color-red {
-    background:radial-gradient(101.17% 387.26% at 21.16% 2.42%, rgba(245, 48, 60, 0.93) 0%, #CE172D 100%); ;
+    background: radial-gradient(
+      101.17% 387.26% at 21.16% 2.42%,
+      rgba(245, 48, 60, 0.93) 0%,
+      #ce172d 100%
+    );
   }
 
   &.background-color-blue {
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 100%), radial-gradient(49.05% 135.38% at 86.04% 0%, #3A8EF1 1.22%, #1759D8 100%); 
+    background: linear-gradient(
+        180deg,
+        rgba(255, 255, 255, 0.2) 0%,
+        rgba(255, 255, 255, 0) 100%
+      ),
+      radial-gradient(49.05% 135.38% at 86.04% 0%, #3a8ef1 1.22%, #1759d8 100%);
   }
 
   .left-content-container {
@@ -140,7 +149,7 @@ footer {
     .btn {
       border-radius: 2rem;
       &.btn-primary {
-        background-color: #CE172D !important;
+        background-color: #ce172d !important;
       }
       a {
         text-decoration: none;
