--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -19,6 +19,8 @@
 @import "utilities/text";
 @import "utilities/gap";
 
+// components
+@import "components/navbar";
 // > Pages
 // 1> Landing
 @import "blocks/landing/landing";
