--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -21,6 +21,7 @@
 
 // components
 @import "components/navbar";
+@import "components/notification";
 // > Pages
 // 1> Landing
 @import "blocks/landing/landing";
