--- a/resources/sass/components/_navbar.scss
+++ b/resources/sass/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar {
   .nav-item {
-    background-color: #dddddd;
+    background-color: white;
     transition: background-color 0.2s ease-in-out;
     @extend .px-1;
     margin: 0 2px;
